20250713_daily_arXiv_update

--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -200,6 +200,16 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20710">https://arxiv.org/abs/2506.20710</a></span> <b>Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality ****** (SangEun Han, Igor F. Herbut)</b></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21428">https://arxiv.org/abs/2506.21428</a></span> Imaginary Time Formalism for Causal Nonlinear Response Functions (Barry Bradlyn)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20735">https://arxiv.org/abs/2506.20735</a></span> Bosonized theory of de Haas-van Alphen quantum oscillation in Fermi liquids ***** (Yuxuan Wang)</p>
+<br>
+<p class="p1">20250630</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21850">https://arxiv.org/abs/2506.21850</a></span> Theory of Magnon Spintronics: Non-Abelian Gauge Theory of Electron Spintronics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21963">https://arxiv.org/abs/2506.21963</a></span> Practical roadmap to measurement-altered criticality in Rydberg arrays (Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.22436">https://arxiv.org/abs/2506.22436</a></span> Is Lindblad for me? ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.22025">https://arxiv.org/abs/2506.22025</a></span> Dipoles and Anyonic Directional Confinement via Twisted Toric Codes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.22297">https://arxiv.org/abs/2506.22297</a></span> Phase-modulated superconductivity via altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.22417">https://arxiv.org/abs/2506.22417</a></span> Quantum-geometric dipole: a topological boost to flavor ferromagnetism in flat bands (Lei Chen, Sayed Ali Akbar Ghorashi, Jennifer Cano)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21773">https://arxiv.org/abs/2506.21773</a></span> Excitation-detector principle and the algebraic theory of planon-only abelian fracton orders (Wilbur Shirley, Michael Hermele)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21673">https://arxiv.org/abs/2506.21673</a></span> Intertwined Orders and the Physics of High Temperature Superconductors ***** (Eduardo Fradkin)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
