--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
 <a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ" class="publink">Publications on <img src="img/Google_Scholar_icon.svg" height="17px" style="vertical-align: sub;" alt="Google Scholar"><img src="img/Google_Scholar_logo.svg" height="17px" style="vertical-align: bottom;" alt="Google Scholar"></a><br>
-<a href="https://arxiv.org/find/all/1/au:+han_sangeun/0/1/0/all/0/1" class="publink">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
+<a href="https://arxiv.org/a/0000-0003-3141-1964.html" class="publink">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
 <a href="https://inspirehep.net/authors/1939891" class="publink">Publications on <img src="img/INSPIRE_logo.svg" height="17px" style="vertical-align: bottom;" alt="INSPIRE" class="theme-dark"><img src="img/INSPIRE_logo_light.svg" height="17px" style="vertical-align: bottom;" alt="INSPIRE" class="theme-light"></a><br>
 <a href="https://orcid.org/0000-0003-3141-1964" class="publink">Publications on <img src="img/ORCID_iD.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"><img src="img/ORCID_logo.svg" height="17px" style="vertical-align: bottom;" alt="ORCID"></a><br>
 <a href="https://www.researchgate.net/profile/Sangeun-Han" class="publink">Publications on <img src="img/ResearchGate_icon.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"><img src="img/ResearchGate_logo_2015.svg" height="17px" style="vertical-align: bottom;" alt="ResearchGate"></a><br>
