20250718_daily_arXiv_update

--- a/arxiv/2025_07_arxiv.html
+++ b/arxiv/2025_07_arxiv.html
@@ -140,6 +140,64 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.07611">https://arxiv.org/abs/2507.07611</a></span> Emergent QED3 at the bosonic Laughlin state to superfluid transition *** (Taige Wang, Xue–Yang Song, Michael P. Zaletel, T. Senthil)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.07921">https://arxiv.org/abs/2507.07921</a></span> Chiral superconductivity near a fractional Chern insulator (Taige Wang,Michael P. Zaletel)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.07121">https://arxiv.org/abs/2507.07121</a></span> Introduction to Quantum Error Correction with Stabilizer Codes *****</p>
+<br>
+<p class="p1">20250714</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08276">https://arxiv.org/abs/2507.08276</a></span> Symmetry-based theory of Dirac fermions on two-dimensional hyperbolic crystals: Coupling to the spin connection (Vladimir Juriˇci ́c)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.07959">https://arxiv.org/abs/2507.07959</a></span> A c-theorem for the effective central charge in the R = 1 replica limit, and applications to systems with measurement-induced randomness (Andreas W. W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08067">https://arxiv.org/abs/2507.08067</a></span> Enhanced entanglement from quantum ergodicity</p>
+<p class="p2"><a href="https://arxiv.org/abs/2507.08010">https://arxiv.org/abs/2507.08010</a><span class="s2"> Temperature</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08088">https://arxiv.org/abs/2507.08088</a></span> Real-Time Dynamics in a (2+1)-D Gauge Theory: The Stringy Nature on a Superconducting Quantum Simulator *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08080">https://arxiv.org/abs/2507.08080</a></span> Diagonal Isometric Form for Tensor Product States in Two Dimensions (Michael P Zaletel, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08148">https://arxiv.org/abs/2507.08148</a></span> Tunable chiral and nematic states in the triple-Q antiferromagnet Co1/3TaS2 (Je-Geun Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.08072">https://arxiv.org/abs/2507.08072</a></span> Electric and spin current vortices in altermagnets *****</p>
+<p class="p3"><br></p>
+<p class="p1">20250715</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.09229">https://arxiv.org/abs/2507.09229</a></span> Lecture Notes on Quantum Many-Body Theory: A Pedagogical Introduction *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.09442">https://arxiv.org/abs/2507.09442</a></span> Linear Resistivity from Spatially Random Interactions and the Uniqueness of Yukawa Coupling (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.09751">https://arxiv.org/abs/2405.09751</a></span> Chern-Simons modification of Fluid Mechanics (P.B. Wiegmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10371">https://arxiv.org/abs/2507.10371</a></span> N <span class="s3">↔</span>−N duality of SU(N) for stable sequences of representations</p>
+<p class="p3"><br></p>
+<p class="p1">20250716</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10892">https://arxiv.org/abs/2507.10892</a></span> Entanglement production in the Sachdev–Ye–Kitaev Model and its variants</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11312">https://arxiv.org/abs/2507.11312</a></span> Mesoscopic Fluctuations and Multifractality at and across Measurement-Induced Phase Transition</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11308">https://arxiv.org/abs/2507.11308</a></span> Localization Transition for Interacting Quantum Particles in Colored-Noise Disorder (Thierry Giamarchi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10700">https://arxiv.org/abs/2507.10700</a></span> Exotic superconducting states in altermagnets (Andreas P. Schnyder)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11218">https://arxiv.org/abs/2507.11218</a></span> Quantum fluctuations in two-dimensional altermagnets **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10668">https://arxiv.org/abs/2507.10668</a></span> Entanglement and Purity in Open Systems: A Breakdown of the Lindblad Approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11541">https://arxiv.org/abs/2507.11541</a></span> Koopman-von Neumann Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10656">https://arxiv.org/abs/2507.10656</a></span> Stabilizer R´ enyi Entropy Encodes Fusion Rules of Topological Defects and Boundaries (Yuto Ashida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10763">https://arxiv.org/abs/2507.10763</a></span> Dimensional crossover of superfluid 3He in a magnetic field (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10654">https://arxiv.org/abs/2507.10654</a></span> Ferrimagnetism from quantum fluctuations in Kitaev materials (Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10687">https://arxiv.org/abs/2507.10687</a></span> Quantum criticality and tunable Griffiths phase in superconducting twisted trilayer graphene (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.10597">https://arxiv.org/abs/2507.10597</a></span> Gravitational Wave Cosmology : an introduction</p>
+<p class="p3"><br></p>
+<p class="p1">20250717</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11957">https://arxiv.org/abs/2507.11957</a></span> Measurement-Induced Phase Transition in a Disordered XX Spin Chain: A Real-Space Renormalization Group Study (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11617">https://arxiv.org/abs/2507.11617</a></span> Competing color superconductivity and color Kondo effect in quark matter **** (Natan Andrei)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11619">https://arxiv.org/abs/2507.11619</a></span> Rise and fall of nonstabilizerness via random measurements</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12193">https://arxiv.org/abs/2507.12193</a></span> Emergent Symmetry and Phase Transitions on the Domain Wall of Z2 Topological Orders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11782">https://arxiv.org/abs/2507.11782</a></span> Conformable Scaling and Critical Dynamics: A Unified Framework for Phase Transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11614">https://arxiv.org/abs/2507.11614</a></span> Nesting-driven ferromagnetism of itinerant electrons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11624">https://arxiv.org/abs/2507.11624</a></span> Higher-Order Fermion Interactions in BCS Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12254">https://arxiv.org/abs/2507.12254</a></span> Electrically tunable heavy fermion and quantum criticality in magic- angle twisted trilayer graphene ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11682">https://arxiv.org/abs/2507.11682</a></span> Multichannel topological Kondo models and their low-temperature conductances ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.11565">https://arxiv.org/abs/2507.11565</a></span> Lecture Notes on Quantum Algorithms</p>
+<p class="p3"><br></p>
+<p class="p1">20250718</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12836">https://arxiv.org/abs/2507.12836</a></span> Quantum geometrical bound relations for observables (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12662">https://arxiv.org/abs/2507.12662</a></span> Walking on Archimedean Lattices: Insights from Bloch Band Theory *** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12783">https://arxiv.org/abs/2507.12783</a></span> Three-dimensional spinless Euler insulators with rotational symmetry (Akira Furusaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12589">https://arxiv.org/abs/2507.12589</a></span> Efficient Qudit Circuit for Quench Dynamics of 2 + 1D Quantum Link Electrodynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12614">https://arxiv.org/abs/2507.12614</a></span> Probing Hadron Scattering in Lattice Gauge Theories on Qudit Quantum Computers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13196">https://arxiv.org/abs/2507.13196</a></span> Discrete solitons in Rydberg atom chains (Maksym Serbyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13352">https://arxiv.org/abs/2507.13352</a></span> Effective field theory for superfluid vortex lattice from coset construction</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12523">https://arxiv.org/abs/2507.12523</a></span> Spacetime duality between sequential and measurement-feedback circuits (Tsung-Cheng Lu, Sarang Gopalakrishnan, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12525">https://arxiv.org/abs/2507.12525</a></span> Higher Structures on Boundary Conformal Manifolds: Higher Berry Phase and Boundary Conformal Field Theory (Yichul Choi, Hyunsoo Ha, Dongyeob Kim, Yuya Kusuki, Shuhei Ohyama, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12546">https://arxiv.org/abs/2507.12546</a></span> Space of conformal boundary conditions from the view of higher Berry phase: Flow of Berry curvature in parametrized BCFTs (Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12515">https://arxiv.org/abs/2507.12515</a></span> Projective Representations, Bogomolov Multiplier, and Their Applications in Physics (Ryohei Kobayashi, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12554">https://arxiv.org/abs/2507.12554</a></span> Self-learning Monte Carlo Method: A Review (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13322">https://arxiv.org/abs/2507.13322</a></span> Artificial Intelligence for Quantum Matter: Finding a Needle in a Haystack (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12510">https://arxiv.org/abs/2507.12510</a></span> Index from a point (Monica Jinwoo Kang, Craig Lawrie, Jaewon Song)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
