20250725_daily_arXiv_update

--- a/arxiv/2025_07_arxiv.html
+++ b/arxiv/2025_07_arxiv.html
@@ -198,6 +198,56 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12554">https://arxiv.org/abs/2507.12554</a></span> Self-learning Monte Carlo Method: A Review (Zi Yang Meng)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13322">https://arxiv.org/abs/2507.13322</a></span> Artificial Intelligence for Quantum Matter: Finding a Needle in a Haystack (Liang Fu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.12510">https://arxiv.org/abs/2507.12510</a></span> Index from a point (Monica Jinwoo Kang, Craig Lawrie, Jaewon Song)</p>
+<br>
+<p class="p1">20250721</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13437">https://arxiv.org/abs/2507.13437</a></span> Free Fermion Dynamics with Measurements: Topological Classification and Adaptive Preparation of Topological States *** (Asadullah Bhuiyan, Haining Pan, Chao-Ming Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13418">https://arxiv.org/abs/2507.13418</a></span> The Hofstadter Butterfly: Bridging Condensed Matter, Topology, and Number Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13503">https://arxiv.org/abs/2507.13503</a></span> Generalized cluster algorithms for Potts lattice gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.13496">https://arxiv.org/abs/2507.13496</a></span> Growing Sparse Quantum Codes from a Seed</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.14081">https://arxiv.org/abs/2507.14081</a></span> Strongly correlated altermagnet CaCrO3 ***</p>
+<p class="p2"><br></p>
+<p class="p1">20250722</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.14168">https://arxiv.org/abs/2507.14168</a></span> The Chirality Trinity: Chirality, Chirality Prime and Time Chirality (Sang-Wook Cheong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15451">https://arxiv.org/abs/2507.15451</a></span> Z2 topological trion insulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.14895">https://arxiv.org/abs/2507.14895</a></span> Granovskii-Zhedanov Scar of XYZ Spin-chain: Modern Algebraic Perspectives and Realization in Higher Dimensional Lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.14318">https://arxiv.org/abs/2507.14318</a></span> Fermion quantum criticality far from equilibrium</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15466">https://arxiv.org/abs/2507.15466</a></span> ’t Hooft Anomalies and Defect Conformal Manifolds: Topological Signatures from Modulated Effective Actions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15668">https://arxiv.org/abs/2507.15668</a></span> Interaction-induced nematic Dirac semimetal from quadratic band touching: A constrained-path quantum Monte Carlo study (Zi Hong Liu, Hongyu Lu, Zi Yang Meng, Lukas Janssen)</p>
+<p class="p2"><br></p>
+<p class="p1">20250723</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16744">https://arxiv.org/abs/2507.16744</a></span> NOTES FROM THE BULK</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15941">https://arxiv.org/abs/2507.15941</a></span> Systematic Improvement of Hamiltonian Truncation Effective Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15950">https://arxiv.org/abs/2507.15950</a></span> Topological control of quantum speed limits</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16026">https://arxiv.org/abs/2507.16026</a></span> Stoner Transition at Finite Temperature in a 2D Isotropic Fermi Liquid **** (Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16453">https://arxiv.org/abs/2507.16453</a></span> Exciton photoemission from a ground state of a solid Ta2Pd3Te5 (Sang-Wook Cheong, Gil Young Cho, Jaeyoung Kim, Han Woong Yeom)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16523">https://arxiv.org/abs/2507.16523</a></span> “Odd” Toric Code in a tilted field: Higgs-confinement multicriticality, spontaneous self-duality symmetry breaking, and valence bond solids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16558">https://arxiv.org/abs/2507.16558</a></span> Thermal Hall transport in Kitaev spin liquids (Yukitoshi Motome)</p>
+<p class="p2"><br></p>
+<p class="p1">20250724</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17201">https://arxiv.org/abs/2507.17201</a></span> Mott Criticality as the Confinement Transition of a Pseudogap-Mott Metal ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17146">https://arxiv.org/abs/2507.17146</a></span> Time-hidden magnetic order in a multi-orbital Mott insulator (Gil Refael, David Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17295">https://arxiv.org/abs/2507.17295</a></span> Beyond symmetry protection: Robust feedback-enforced edge states in non-Hermitian stacked quantum spin Hall systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16373">https://arxiv.org/abs/2507.16373</a></span> Meta-learning of Gibbs states for many-body Hamiltonians with applications to Quantum Boltzmann Machines</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16882">https://arxiv.org/abs/2507.16882</a></span> Many-body delocalization with a two-dimensional 70-qubit superconducting quantum simulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17573">https://arxiv.org/abs/2507.17573</a></span> Renormalization group for effective field theories: cutoff schemes and universality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16892">https://arxiv.org/abs/2507.16892</a></span> Superconductivity in kagome metals due to soft loop-current fluctuations **** (Daniel J. Schultz, Grgur Palle, Yong Baek Kim, Rafael M. Fernandes, J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16896">https://arxiv.org/abs/2507.16896</a></span> The sphere free energy of the vector models to order 1/N</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.16966">https://arxiv.org/abs/2507.16966</a></span> Higher symmetries, anomalies, and crossed squares in lattice gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17532">https://arxiv.org/abs/2507.17532</a></span> Coincidence double-tip scanning tunneling spectroscopy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17751">https://arxiv.org/abs/2507.17751</a></span> Perturbative renormalization group approach to magic-angle twisted bilayer graphene using topological heavy fermion model ***** (Yi Huang,<span class="s3">∗</span> Yang-Zhi Chou, and Sankar Das Sarma</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.15932">https://arxiv.org/abs/2507.15932</a></span> A Partially Massless Superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21268">https://arxiv.org/abs/2410.21268</a></span> Pseudochaotic Many-Body Dynamics as a Pseudorandom State Generator (Wonjun Lee, Hyukjoon Kwon, Gil Young Cho)</p>
+<p class="p2"><br></p>
+<p class="p1">20250725</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18020">https://arxiv.org/abs/2507.18020</a></span> Multipole order in two-dimensional altermagnets ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18458">https://arxiv.org/abs/2507.18458</a></span> Emergent-gravity Hall effect from quantum geometry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17871">https://arxiv.org/abs/2507.17871</a></span> Shallow quantum circuit for generating O(1)-entangled approximate state designs (Wonjun Lee, Minki Hhan, Gil Young Cho, Hyukjoon Kwon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18291">https://arxiv.org/abs/2507.18291</a></span> Symmetries of the periodic Fredkin chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18298">https://arxiv.org/abs/2507.18298</a></span> Two coupled chiral SYK model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17822">https://arxiv.org/abs/2507.17822</a></span> Magnon topology driven by altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17840">https://arxiv.org/abs/2507.17840</a></span> Comparative analysis of plasmon modes in layered Lindhard metals and strange metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18582">https://arxiv.org/abs/2507.18582</a></span> Variational Monte Carlo Optimization of Topological Chiral Superconductors (Minho Luke Kim, Abigail Timmel, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18611">https://arxiv.org/abs/2507.18611</a></span> Topological constraint on crystalline current (Tomohiro Soejima, Junkai Dong, Ophelia Evelyn Sommer, Daniel E. Parker, Ashvin Vishwanath)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
