20250808_daily_arXiv_update

--- a/arxiv/2025_07_arxiv.html
+++ b/arxiv/2025_07_arxiv.html
@@ -248,6 +248,39 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.17840">https://arxiv.org/abs/2507.17840</a></span> Comparative analysis of plasmon modes in layered Lindhard metals and strange metals</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18582">https://arxiv.org/abs/2507.18582</a></span> Variational Monte Carlo Optimization of Topological Chiral Superconductors (Minho Luke Kim, Abigail Timmel, Xiao-Gang Wen)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18611">https://arxiv.org/abs/2507.18611</a></span> Topological constraint on crystalline current (Tomohiro Soejima, Junkai Dong, Ophelia Evelyn Sommer, Daniel E. Parker, Ashvin Vishwanath)</p>
+<br>
+<p class="p1">20250728</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18693">https://arxiv.org/abs/2507.18693</a></span> Microscopic Fingerprint of Chiral Superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.18746">https://arxiv.org/abs/2507.18746</a></span> Chaotic signatures in free field theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.19301">https://arxiv.org/abs/2507.19301</a></span> Fermi liquid and isotropic superconductivity of Hund scenario for bilayer nickelates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.19401">https://arxiv.org/abs/2507.19401</a></span> The gauge theory dual of the bilayer XY model with second order Josephson coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.17841">https://arxiv.org/abs/2502.17841</a></span> Quantifying interdisciplinary synergy in higher STEM education (Gahyoun Gim, Jinhyuk Yun, Sang Hoon Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20250729</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.19580">https://arxiv.org/abs/2507.19580</a></span> Chern-Simons-matter conformal field theory on fuzzy sphere: Confinement transition of Kalmeyer-Laughlin chiral spin liquid ***** (Zheng Zhou, Chong Wang, Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.19932">https://arxiv.org/abs/2507.19932</a></span> Equivariant Parameter Families of Spin Chains: A Discrete MPS Formulation <span class="s2">∗</span> (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.20904">https://arxiv.org/abs/2507.20904</a></span> Color and Transparency from Quantum Geometry (Chang-geun Oh, Sun-Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21043">https://arxiv.org/abs/2507.21043</a></span> Topological chiral superconductivity from antiferromagnetic correlations in moir´e bands with extreme spin-orbit coupling (Chenyuan Li, Fang Xie, Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.19576">https://arxiv.org/abs/2507.19576</a></span> Cyclotron reonance in a kagome spin liquid candidate material (Byungmin Kang, Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.20540">https://arxiv.org/abs/2507.20540</a></span> Geometric Superfluid Weight in Quasicrystals (Junsong Sun, Huaiming Guo, Bohm-Jung Yang)</p>
+<p class="p2"><br></p>
+<p class="p1">20250730</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21209">https://arxiv.org/abs/2507.21209</a></span> Anomalies of global symmetries on the lattice (Yi-Ting Tu, David M. Long, Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21375">https://arxiv.org/abs/2507.21375</a></span> Excitation and tunneling spectra of a fractional quantum Hall system in the thin</p>
+<p class="p1">cylinder limit (Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21226">https://arxiv.org/abs/2507.21226</a></span> Magnetically ordered yet topologically robust phases emerging in concurrent Kitaev spin liquids (Hae-Young Kee, Onur Erten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21267">https://arxiv.org/abs/2507.21267</a></span> Anomaly-free symmetries with obstructions to gauging and onsiteability (Wilbur Shirley, Carolyn Zhang, Wenjie Ji, Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.21766">https://arxiv.org/abs/2507.21766</a></span> Field Theory of Borromean Super-counterfluids</p>
+<p class="p2"><br></p>
+<p class="p1">20250731</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22436">https://arxiv.org/abs/2507.22436</a></span> Thermal Hall effect induced by phonon skew-scattering via orbital magnetization (Taekoo Oh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22119">https://arxiv.org/abs/2507.22119</a></span> What is the topological dual of the XXZ spin Chain? (Yicheng Tang, Pradip Kattel, Natan Andrei)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.11486">https://arxiv.org/abs/2412.11486</a></span> Anyon Condensation in Virasoro TQFT: Wormhole Factorization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22139">https://arxiv.org/abs/2507.22139</a></span> Persistent spin currents in superconducting altermagnets (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22594">https://arxiv.org/abs/2507.22594</a></span> Anomalous dimensions and critical exponents for the Gross-Neveu-Yukawa model at five loops (J.A. Gracey)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22121">https://arxiv.org/abs/2507.22121</a></span> Chiral Wigner crystal phases induced by Berry curvature (Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22130">https://arxiv.org/abs/2507.22130</a></span> Continuous transition from Fermi liquid to A fractional Chern insulator (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2507.22394">https://arxiv.org/abs/2507.22394</a></span> Sequential Circuit as Generalized Symmetry on Lattice (Xie Chen)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
