20250905_daily_arXiv_update_typo_update_CV_update

--- a/arxiv/2025_09_arxiv.html
+++ b/arxiv/2025_09_arxiv.html
@@ -44,6 +44,53 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20250901</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21117">https://arxiv.org/abs/2508.21117</a></span> Charge density wave induced gapped nodal line (Lei Chen, Jennifer Cano)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21639">https://arxiv.org/abs/2508.21639</a></span> Replicated liquid theory in 1 + ∞ dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21119">https://arxiv.org/abs/2508.21119</a></span> Displacement-Field-Driven Transition between Superconductivity and Valley Ferromagnetism in Transition Metal Dichalcogenides ***** (Hyeok-Jun Yang, Yi-Ting Hsu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21127">https://arxiv.org/abs/2508.21127</a></span> Exact models of chiral flat-band superconductors ***** (Zhaoyu Han, Jonah Herzog-Arbeitman, Qiang Gao, Eslam Khalaf)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21791">https://arxiv.org/abs/2508.21791</a></span> Quantum Geometry Induced Kekule ́ Superconductivity in Haldane phases *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21817">https://arxiv.org/abs/2508.21817</a></span> An Introduction to Gravitational Wave Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21266">https://arxiv.org/abs/2508.21266</a></span> Higher-order Chern-Simons extensions to QED in 2 + 1 dimensions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21276">https://arxiv.org/abs/2508.21276</a></span> Finite entropy sums in quantum field theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21633">https://arxiv.org/abs/2508.21633</a></span> Lectures on the Spinor and Twistor Formalism in 3D Conformal Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20250903</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.00776">https://arxiv.org/abs/2509.00776</a></span> Band Geometry Induced Third-Harmonic Generation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02168">https://arxiv.org/abs/2509.02168</a></span> Classification of topological insulators and superconductors with multiple order-two point group symmetries (Ken Shiozaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.00369">https://arxiv.org/abs/2509.00369</a></span> Hidden ferromagnetism of centrosymmetric antiferromagnets ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.00281">https://arxiv.org/abs/2509.00281</a></span> Strange diffusivity of incoherent metal in half-filled two-dimensional Hubbard model (Aaram J. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02044">https://arxiv.org/abs/2509.02044</a></span> Boundary Renormalization Group Flow of Entanglement Entropy at a (2+1)-Dimensional Quantum Critical Point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.00593">https://arxiv.org/abs/2509.00593</a></span> Genuine multi-entropy, dihedral invariants and Lifshitz theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02218">https://arxiv.org/abs/2509.02218</a></span> Probing Non-Fermi-Liquid Behaviour of Composite Fermi Liquid via Efficient Thermal Simulations (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02243">https://arxiv.org/abs/2509.02243</a></span> Diamagnetic Meissner response of odd-frequency superconducting pairing from quantum geometry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02542">https://arxiv.org/abs/2509.02542</a></span> Soft Theorems in Chern-Simons Matter Theories</p>
+<p class="p2"><br></p>
+<p class="p1">20250904</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02661">https://arxiv.org/abs/2509.02661</a></span> The Future of Artificial Intelligence and the Mathematical and Physical Sciences (AI+MPS)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02976">https://arxiv.org/abs/2509.02976</a></span> Effect of Γ7 and Γ8 Hybridizations on Three-Channel Kondo Phase Emerging from Ho Ions ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02675">https://arxiv.org/abs/2509.02675</a></span> Robust superconductivity upon doping chiral spin liquid and Chern insulators in a Hubbard-Hofstadter model ****<span class="Apple-converted-space">  </span>(Clemens Kuhlenkamp, Stefan Divic, Michael P. Zaletel, Tomohiro Soejima, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03079">https://arxiv.org/abs/2509.03079</a></span> Deconfined Quantum Critical Point in Quantum Hall Bilayers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03072">https://arxiv.org/abs/2509.03072</a></span> First-Order PT Phase Transition in Non-Hermitian Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2508.21502">https://arxiv.org/abs/2508.21502</a></span> Anyons in the π-flux phase of fermionic matter coupled to a Z2-gauge field</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03033">https://arxiv.org/abs/2509.03033</a></span> Tilted Dirac cones and their topology in Holographic Materials (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03253">https://arxiv.org/abs/2509.03253</a></span> Parquet theory for molecular systems. I. Formalism and static kernel parquet approximation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03387">https://arxiv.org/abs/2509.03387</a></span> Topology meets superconductivity in a one-dimensional t–J model of magnetic atoms</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.02673">https://arxiv.org/abs/2509.02673</a></span> Doping a spin-one Mott insulator: possible application to bilayer nickelate ***** (Hanbit Oh, Hui Yang, Ya-Hui Zhang)</p>
+<p class="p2"><br></p>
+<p class="p1">20250905</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03774">https://arxiv.org/abs/2509.03774</a></span> Proximitizing altermagnets with conventional superconductors (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04447">https://arxiv.org/abs/2509.04447</a></span> Zero modes and index theorems for non-Hermitian Dirac fermions (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03570">https://arxiv.org/abs/2509.03570</a></span> Dynamical Quantum Phase Transitions and Many-Body Backflow in Open Quantum Systems (Kai Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04408">https://arxiv.org/abs/2509.04408</a></span> Chiral Graviton Theory of Fractional Quantum Hall States *** (Yi-Hsien Du)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.04418">https://arxiv.org/abs/2509.04418</a></span> The influence of the Casimir effect on the binding potential for 3D wetting</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03612">https://arxiv.org/abs/2509.03612</a></span> Three-channel charge Kondo model at high transparency *** (Christophe Mora)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03583">https://arxiv.org/abs/2509.03583</a></span> Magic continuum in multi-moir ́e twisted trilayer graphene ***** (Julian May-Mann, Liang Fu, Trithep Devakul, Pablo Jarillo-Herrero)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03586">https://arxiv.org/abs/2509.03586</a></span> Quantum simulation of out-of-equilibrium dynamics in gauge theories ***** (Jad C. Halimeh, Niklas Mueller, Johannes Knolle, Zlatko Papi ́c, Zohreh Davoudi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03589">https://arxiv.org/abs/2509.03589</a></span> Disjoint additivity and local quantum physics ***** (Daniel Harlow, Shu-Heng Shao, Jonathan Sorce, Manu Srivastava)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03600">https://arxiv.org/abs/2509.03600</a></span> Trading Mathematical for Physical Simplicity: Bialgebraic Structures in Matrix Product Operator Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03575">https://arxiv.org/abs/2509.03575</a></span> Ferromagnetism vs. Antiferromagnetism in Narrow-Band Systems: Competition Between Quantum Geometry and Band Dispersion ***** (Haoyu Hu, Oskar Vafek, Kristjan Haule, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03683">https://arxiv.org/abs/2509.03683</a></span> Attention is all you need to solve chiral superconductivity ***** (Chun-Tse Li, Tzen Ong, Max Geier, Hsin Lin, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2509.03936">https://arxiv.org/abs/2509.03936</a></span> Two-dimensional coherent spectroscopy of disordered superconductors in the narrow-band and broad-band limits (Naoto Tsuji)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
