--- a/titlecontent.html
+++ b/titlecontent.html
@@ -41,8 +41,8 @@
 <div id="titlecontent" style="font-size:90%">
 <span class="cvitemcontent">e-mail: sehan.physics at gmail.com & sangeun.han at stonybrook.edu<br>
 	<!--& se.han at utoronto.ca (will fade out on August 31st, 2023)<br>-->
-<a href="https://www.sfu.ca/physics/">Department of Physics and Astronomy</a><br>
-<a href="https://www.sfu.ca">Stony Brook University (SBU)</a></span></div>
+<a href="https://www.stonybrook.edu/commcms/physics/">Department of Physics and Astronomy</a><br>
+<a href="https://www.stonybrook.edu/">Stony Brook University (SBU)</a></span></div>
 </body>
 </html>
 
